# test-release-automation

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  cog.toml  release-please-config.json
.github/workflows/: prepare-release.yml  publish-release.yaml  publish-release.yml  publish.yaml  release-pr.yaml  release.yaml  release.yml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: lib.rs
crates/web/: CHANGELOG.md  Cargo.toml
crates/web/src/: lib.rs
src/: lib.rs
