[package]
name = "test_ra_cli"
version = "0.2.1-dev.2"
edition.workspace = true
description.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "test-ra"
path = "./src/main.rs"

[dependencies]
test_ra_core = { version = "0.2.0-dev.2", path = "../core" }
clap = { version = "4.5", features = ["derive"] }
