[package]
name = "test_ra_web"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
test_ra_core = { version = "0.1.0", path = "../core" }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
